--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>
-	<title>Porter Free Token</title>
+	<title>PorterFreeToken</title>
 	<script src="lib/intersection-observer/intersection-observer.js"></script>
 		<style>
 			
@@ -753,7 +753,7 @@
 	<!--/* Start header-->
 		<div id="header">
 					<div id="logo" style="float:left;">
-						<img src="https://sc04.alicdn.com/kf/HTB1jQ9KRXXXXXc3XXXX760XFXXXk.png" style="width: 130px;margin-top: -43px;margin-left: 10px;">
+						<img src="pf%20logo-1.png" style="width: 130px;margin-top: -43px;margin-left: 10px;">
 					</div>
 			
 					<div id="menu0">
@@ -772,7 +772,7 @@
 <!-- Top Navigation Menu -->
 <div class="topnav">
   <div style="
-"><img src="https://sc04.alicdn.com/kf/HTB1jQ9KRXXXXXc3XXXX760XFXXXk.png" style="width: 10%;margin-left: 45%;">
+"><img src="pf%20logo-1.png" style="width: 10%;margin-left: 45%;">
 	
 	
 
@@ -938,7 +938,7 @@ initializeClock('clockdiv', deadline);
 			<div class="row-right fade-in" style="
     animation: 2s ease 0s normal forwards 1 fadein;
 ">
-			<img src="https://sc04.alicdn.com/kf/HTB1jQ9KRXXXXXc3XXXX760XFXXXk.png" style="width: 396px; height:auto; margin-top: 48px;">
+			<img src="pf%20logo-1.png" style="width: 396px; height:auto; margin-top: 48px;">
 				<div class="contentrow">
 				</div>
 			</div>
