--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
 				}
 						body{
 		font-family: Arial, sans-serif;
-		background-image: url(sfondord.png);
+		background-image: url(https://dcassetcdn.com/design_img/494649/36030/36030_3666114_494649_image.jpg);
 		background-size: 100%;
 		font-variant: unicase;
+		background-attachment: fixed;
 		}
 			div.row-left-socials{
 			width: 70%;
@@ -123,9 +124,10 @@
 				}
 						body{
 		font-family: Arial, sans-serif;
-		background-image: url(sfondord.png);
+		background-image: url(https://dcassetcdn.com/design_img/494649/36030/36030_3666114_494649_image.jpg);
 		background-size: 100%;
 		font-variant: unicase;
+		background-attachment: fixed;
 		}
 		button {
 			    width: 400px;
