--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					    FLOAT: LEFT;
 					}
 				div#interno-sinistra{
-				background: rgb(255 255 255 / 70%);
+				background: rgb(187 179 179 / 70%) !important;
 			    WIDTH: 50%;
 			    margin-left: 50%;
 			    height: 100%;
@@ -59,8 +59,8 @@
 				}
 						body{
 		font-family: Arial, sans-serif;
-		background-image: url(https://dcassetcdn.com/design_img/494649/36030/36030_3666114_494649_image.jpg);
-		background-size: 100%;
+		background-image: url(https://a-static.besthdwallpaper.com/sfondo-viola-diviso-sfondo-1600x1200-59090_23.jpg);
+		background-size: cover;
 		font-variant: unicase;
 		background-attachment: fixed;
 		background-repeat: no-repeat;
@@ -95,7 +95,7 @@
 					    FLOAT: LEFT;
 					}
 				div#interno-sinistra{
-				background: rgb(255 255 255 / 70%);
+				background: rgb(187 179 179 / 70%) !important;
 			    WIDTH: 50%;
 			    margin-left: 50%;
 			    height: 21%;
@@ -125,8 +125,8 @@
 				}
 						body{
 		font-family: Arial, sans-serif;
-		background-image: url(https://dcassetcdn.com/design_img/494649/36030/36030_3666114_494649_image.jpg);
-		background-size: 100%;
+		background-image: url(https://a-static.besthdwallpaper.com/sfondo-viola-diviso-sfondo-1600x1200-59090_23.jpg);
+		background-size: cover;
 		font-variant: unicase;
 		background-attachment: fixed;
 		background-repeat: no-repeat;
@@ -157,7 +157,7 @@
 		.row-left-alt {
 				    height: 435px !important;
 				    width: 100% !important;
-				    background-color: rgb(255 255 255 / 70%) !important;
+				    background-color: rgb(187 179 179 / 70%) !important;
 				    text-align: center !important;
 				    margin-top: 50% !important;
 				    margin-bottom: 5%;
@@ -175,7 +175,7 @@
 				    width: 100% !important;
 				    text-align: center !important;
 				    margin-top: 25px !important;
-				    background-color: rgb(255 255 255 / 70%) !important;
+				    background-color: rgb(187 179 179 / 70%) !important;
 			            border-radius: 20px;
 			      
 		}
@@ -350,7 +350,7 @@
 				    width: 40%;
 				    text-align: center;
 					margin-top: 25px;
-					background-color: rgb(255 255 255 / 70%);
+					background-color: rgb(187 179 179 / 70%) !important;
 				    float:left;
 				    border-radius: 20px;
 			      
@@ -358,7 +358,7 @@
 		.row-left-alt{
 				    height: 435px;
 				    width: 40%;
-				    background-color: rgb(255 255 255 / 70%);
+				    background-color: rgb(187 179 179 / 70%) !important;
 				    text-align: center;
 				    margin-top: 25px;		
 				    padding-top: 30px;
@@ -494,7 +494,7 @@
 			button{
 		width: 400px;
 		height: 40px;
-		background-color: white;
+		background-color: #8dc544;
 		border-radius: 5px;
 		border: black;
 		color: black;
@@ -917,7 +917,7 @@ initializeClock('clockdiv', deadline);
 </div>
 <div id="interno-sinistra">
 	<h1 style="
-    color: #df0016;"> How to Buy LegnanoCoin </h1>
+    color: white;"> How to Buy LegnanoCoin </h1>
 </div>
 			</div>
 	<!--*/end progresbar -->
