--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ display:block ;
 					#clockdiv > div{
 						padding: 10px;
 						border-radius: 3px;
-						background: rgb(157 41 126 / 70%);
+						background: rgb(80 185 94);
 						display: inline-block;
 					}
 
