--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 			section#sec{
 height:100%;
 width:100%;
+display: contents;
 }
 .leaf{
     position: fixed;
@@ -1003,7 +1004,7 @@ initializeClock('clockdiv', deadline);
 </div>
 <div id="interno-sinistra">
 	<h1 style="
-    color: white;"> How to Buy LegnanoCoin </h1>
+    color: white;"> How to Buy Porterfree </h1>
 </div>
 			</div>
 	<!--*/end progresbar -->
@@ -1252,7 +1253,7 @@ initializeClock('clockdiv', deadline);
 	<div id="social">
 		<div class="row-superior.socials fade-in-animation">
 			<div class="row-left-socials fade-in" style="float:left;">
-			<h1>Legananocoin@legnanocoin.com</h1>
+			<h1>>PorterFreeToken@porterfree.com</h1>
 			</div>
 			<div class="row-right-socials fade-in" style="float:left;">
 			<div class="contentrow">
