--- a/index.html
+++ b/index.html
@@ -1003,8 +1003,7 @@ initializeClock('clockdiv', deadline);
 						<Button>Join to Pre-sales</Button>
 </div>
 <div id="interno-sinistra">
-	<h1 style="
-    color: white;"> How to Buy Porterfree </h1>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/-gAJIFbDT0o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 			</div>
 	<!--*/end progresbar -->
