--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 				}
 						body{
 		font-family: Arial, sans-serif;
-		background-image: url(https://img.besthqwallpapers.com/Uploads/14-12-2019/115740/travel-to-greece-world-map-travel-concepts-magnifying-glass-greek-wine.jpg);
 		background-size: cover;
 		font-variant: unicase;
 		background-attachment: fixed;
@@ -294,7 +293,7 @@
 		margin-bottom: 20px;
 		border-radius: 20px;
 		}
-		div#whitepaper{
+		div#white{
 		width: 100%;
 		height: auto;
 			margin-bottom: 20px;
@@ -761,7 +760,7 @@
 					<div id="menu0">
 						 <ul id="menu">
 							<li><a href="#home">Home</a></li>
-							<li><a href="#whitepaper">WhitePaper</a></li>
+							<li><a href="#white">white</a></li>
 							<li><a href="#tokenomics">Tokenomics</a></li>
 							<li><a href="#audit">Audit</a></li>
 							<li><a href="#team">Team</a></li>
@@ -786,7 +785,7 @@
   <div id="myLinks" style="text-align: center; display: none;">
 	  <ul id="nav" style="list-style: none;">
 							<li><a style="font-size: 2em;" href="#fome">Home</a>
-							</li><li><a style="font-size: 2em;" href="#whitepaper">WhitePaper</a>
+							</li><li><a style="font-size: 2em;" href="#white">white</a>
 							</li><li><a style="font-size: 2em;" href="#tokenomics">Tokenomics</a>
 							</li><li><a style="font-size: 2em;" href="#audit">Audit</a>
 							</li><li><a style="font-size: 2em;" href="#team">Team</a>
@@ -799,8 +798,6 @@
 	</div>
 
 <!-- End smartphone / tablet look -->
-
-
 <script>
 function myFunction() {
   var x = document.getElementById("myLinks");
@@ -811,6 +808,7 @@ function myFunction() {
   }
 }
 </script>
+					<button style="animation: 5s ease 0s normal forwards 1 fadein;"><b>  BUy Now</b></button>
 	<br>
 	<br>
 	<!--*/start home-->
@@ -823,9 +821,6 @@ function myFunction() {
 			<p class="contenuto fade-in-animationtext"> Estratto White Paper,  Estratto White Paper,  Estratto White Paper,  Estratto White Paper,  Estratto White Paper,  Estratto White Paper,  Estratto White Paper. 
 			Estratto White Paper,  Estratto White Paper,  Estratto White Paper,  Estratto White Paper,  Estratto White Paper,  Estratto White Paper,  Estratto White Paper.</p> 
 			<br>
-			<button style="
-    animation: 5s ease 0s normal forwards 1 fadein;
-"><b> Telegram </b></button>
 			</div>
 			<div class="row-right fade-in" style="
     animation: 2s ease 0s normal forwards 1 fadein;
@@ -839,8 +834,8 @@ function myFunction() {
 	<!--*/end home-->
 	<br>
 	<br>
-	<!--*/start whitepaper-->
-	<div id="whitepaper" style="
+	<!--*/start white-->
+	<div id="white" style="
 ">
 		<div class="row-superior fade-in-animation">
 			<div class="row-left-alt fade-in">
@@ -848,7 +843,7 @@ function myFunction() {
 			<p class="contenutoalt"> A document released by a crypto project that gives investors technical information about its concept</p>
 			</div>
 			<div class="row-right-alt fade-in">
-			<h1>Whitepaper</h1>
+			<h1>white</h1>
 			<p class="line">---</p>
 			<p class="contenuto fade-in-animationtext"> Estratto White Paper,  Estratto White Paper,  Estratto White Paper,  Estratto White Paper,  Estratto White Paper,  Estratto White Paper,  Estratto White Paper.</p> 
 			<br>
@@ -860,7 +855,7 @@ function myFunction() {
 			</div>
 		</div>
 	</div>
-	<!--*/end whitepaper-->
+	<!--*/end white-->
 	<br>
 	<br>
 	<!--*/start tokenomics-->
