--- a/index.html
+++ b/index.html
@@ -131,14 +131,11 @@
 		background-repeat: no-repeat;
 		}
 		button {
-			    width: 400px;
+			    width: 150px;
 			    height: 40px;
-			    background-color: white;
-			    border-radius: 5px;
-			    border: black;
-			    color: black;
-			    box-shadow: 5px 5px 5px;
-			    font-size: 2em;
+			    background-color: #11bef8;
+			    border-radius: 25px;
+			    color: white;
 			}
 		div#audit {
 			    width: 100%;
