--- a/index.html
+++ b/index.html
@@ -750,19 +750,15 @@
 	<body>
 	<!--/* Start header-->
 		<div id="header">
-					<div id="logo" style="float:left;">
-						<img src="logo.png" style="width: 350px;margin-top: -43px;margin-left: 10px;">
-					</div>
-			
 					<div id="menu0">
 						 <ul id="menu">
-							<li><a href="#home">Home</a></li>
-							<li><a href="#white">white</a></li>
-							<li><a href="#tokenomics">Tokenomics</a></li>
-							<li><a href="#audit">Audit</a></li>
-							<li><a href="#team">Team</a></li>
-							<li><a href="#roadMap">RoadMap</a></li>
-							<li><a href="#">Join To Presale</a></li>
+							<li><a href="#home">ROADMAP</a></li>
+							<li><a href="#white">TEAM</a></li>
+							<li><a href="#tokenomics">DOCS</a></li>
+							<li><a href="#audit">Medium</a></li>
+							<li><a href="#team">R</a></li>
+							<li><a href="#roadMap">T</a></li>
+							<li><a href="#">FAQ</a></li>
 			</ul></div>
 		</div>
 	<!--*/end header-->
