--- a/index.html
+++ b/index.html
@@ -488,13 +488,11 @@
 		margin-left: 50px;
 		}
 			button{
-		width: 400px;
-		height: 40px;
-		background-color: #8dc544;
-		border-radius: 5px;
-		border: black;
-		color: black;
-		box-shadow: 5px 5px 5px;
+			    width: 150px;
+			    height: 40px;
+			    background-color: #11bef8;
+			    border-radius: 25px;
+			    color: white;
 		}
 		#clockdiv{
 						font-family: sans-serif;
